# midnight-memory

./: .gitattributes  .gitignore  README.ja.md  README.md  SKILL.md  index.html  package-lock.json  package.json  playwright.config.js  pyproject.toml  viewer-probe.spec.js
.github/workflows/: ci.yml  pages.yml
agents/: openai.yaml
assets/: Midnight Memory 夢のつづき   Bridge - Final Chorus.outro.srt  Midnight Memory 夢のつづき   Bridge - Final Chorus.srt  Midnight Memory 夢のつづき  Intro - Chorus 1.intro.srt  Midnight Memory 夢のつづき  Intro - Chorus 1.main.srt  Midnight Memory 夢のつづき  Intro - Chorus 1.srt  manifest.json
assets/ltx-segments/: Midnight Memory 夢のつづき   Bridge - Final Chorus.ltx_segments.srt  Midnight Memory 夢のつづき  Intro - Chorus 1.ltx_segments.srt  midnight-memory-nanobanana-prompts.ja.md  midnight-memory-nanobanana-reference-workflow.ja.md  midnight-memory-scene-prompts.ja.md
docs/: index.md  intro-outro-subtitle-workflow.md  ltx-segment-workflow.md  remotion-lyric-motion-workflow.md
docs/.vitepress/: config.mjs
docs/ja/: index.md  intro-outro-subtitle-workflow.md  ltx-segment-workflow.md  remotion-lyric-motion-workflow.md
remotion-app/: .gitignore  package-lock.json  package.json
remotion-app/src/: Root.jsx
scripts/: __init__.py  create_stub_audio.py  extract_subtitle_gap.py  gemini_srt.py  prepare_viewer_test_assets.py  segment_ltx_audio.py  split_audio_by_srt.py  validate_manifest.py
tests/: conftest.py  test_extract_subtitle_gap.py  test_gemini_srt.py  test_segment_ltx_audio.py  test_split_audio_by_srt.py
viewer/: app.js  index.html  styles.css
(+21 files in other folders)
